--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
             <div class="weather">
                 <img src="./images/rain.png" alt="" class="weather-icon">
+                <p class="condition">rainy</p>
                 <h1 class="temp"> 22°C</h1>
                 <h2 class="city">Calangute</h2>
                 <div class="details">
