--- a/index.html
+++ b/index.html
@@ -37,6 +37,20 @@
                 </div>
             </div>
         </div>
+
+        <div class="card-suntimings">
+                <img src="./images/suntimings.png" alt="" srcset="">
+                <div class="sun-details">
+                    <div class="sunrise">
+                            sunrise time
+                    </div>
+                    <div class="sunset">
+                        sunset time
+                </div>
+                </div>
+
+            </div>
+
         <script src="script.js"></script>
     </body>
 
